# my_research

./: .gitignore  README.md  pyproject.toml
my_research/: get_knowledge_from_hidanotabi.py  main.py  my_functions.py  structure.md
my_research/output/: courses_from_hidanotabi.csv  event_from_hidanotabi.csv  plan_from_hidanotabi.csv  product_from_hidanotabi.csv  reserve_from_hidanotabi.csv  spot_from_hidanotabi.csv
